feat: 实现代码解释插件的核心功能
- 添加 CodeAskData 模型类，用于解析和存储代码解释数据
- 实现 CodeAskDataService 服务，负责加载和解析 .codeaskdata 文件- 创建 CodeAskToolWindowFactory工厂类，用于生成代码解释工具窗口
- 添加 CodeAskFileEditorListener 监听器，用于监听文件变化并更新代码解释显示
- 在 plugin.xml 中配置工具窗口和项目服务
- 添加插件图标和描述

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,32 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.woniu9524.codeaskjb</id>
-    <name>codeask-jb</name>
+    <name>CodeAsk</name>
     <vendor>woniu9524</vendor>
+    <description><![CDATA[
+        代码解释插件，自动加载和显示项目中代码文件的解释信息。
+        <ul>
+            <li>支持从.codeaskdata文件加载代码解释数据</li>
+            <li>自动识别当前编辑文件</li>
+            <li>多标签页展示不同类型的解释</li>
+            <li>一键复制和刷新解释内容</li>
+        </ul>
+    ]]></description>
 
     <depends>com.intellij.modules.platform</depends>
 
     <resource-bundle>messages.MyBundle</resource-bundle>
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.woniu9524.codeaskjb.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
+        <toolWindow id="CodeAsk" 
+                    anchor="right"
+                    factoryClass="com.github.woniu9524.codeaskjb.toolWindow.CodeAskToolWindowFactory"
+                    icon="/icons/codeask.svg"/>
+        <projectService serviceImplementation="com.github.woniu9524.codeaskjb.services.CodeAskDataService"/>
     </extensions>
 
     <applicationListeners>
-        <listener class="com.github.woniu9524.codeaskjb.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
+        <listener class="com.github.woniu9524.codeaskjb.listeners.CodeAskFileEditorListener" 
+                  topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
     </applicationListeners>
 </idea-plugin>
