feat(toolwindow): 重构代码解释工具窗口
- 使用 JCEF浏览器替换原有的 Swing 组件
- 优化文件选择和代码解释数据加载逻辑
- 移除冗余代码和不必要的组件- 提升用户体验和性能

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,10 +6,10 @@
     <description><![CDATA[
         代码解释插件，自动加载和显示项目中代码文件的解释信息。
         <ul>
-            <li>支持从.codeaskdata文件加载代码解释数据</li>
-            <li>自动识别当前编辑文件</li>
+            <li>从.codeaskdata文件加载代码解释数据</li>
+            <li>自动识别当前编辑的文件</li>
             <li>多标签页展示不同类型的解释</li>
-            <li>一键复制和刷新解释内容</li>
+            <li>无缝集成到IDE中</li>
         </ul>
     ]]></description>
 
